<resources>
    <string name="rfidVer">UHF module version</string>
    <string name="hwVer">Hardware version</string>
    <string name="app_name">Estral_Master</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_about">Acerca de</string>
    <string name="title_inventory_time">Run time:</string>
    <string name="action_display">Display Settings</string>
    <string name="title_ip_or_domain">Input Domain/IP</string>
    <string name="title_ping_count">PING Count</string>
    <string name="title_ping_succ">PING Success</string>
    <string name="title_ping_fail">PING failure</string>
    <string name="title_ping_seconds"> s</string>
    <string name="title_ping_background">Background</string>
    <string name="title_ping_wait">Timeout(s)</string>
    <string name="title_ping_restart">Restart</string>
    <string name="title_ping_pingresult">Ping Result</string>
    <string name="title_ping_uploadresult">Upload Result</string>
    <string name="title_ping_downloadresult">Download Result</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_set">Settings</string>
    <string name="msg_network_none">Network unavailable</string>
    <string name="msg_network_ok">Network is connected</string>
    <string name="msg_network_unavailable">Network unavailable</string>
    <string name="msg_domain_ip_bad">Domain/IP Error</string>
    <string name="msg_loding">loading...</string>
    <string name="msg_no_data">NO DATA</string>
    <string name="msg_mac_error">ERROR</string>
    <string name="msg_mac_change">CHANGED</string>
    <string name="msg_mac_unmatched">Unmatched</string>
    <string name="app_title">AppCenter</string>
    <string name="app_msg_exit_confirm">Press again to exit the program</string>
    <string name="upload_title">Upload Tool %s</string>
    <string name="download_title">Download Tool %s</string>
    <string name="action_back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="up_one_level">..(up)</string>
    <string name="current_dir">.(refresh)</string>
    <string name="strFilePath">File Path</string>
    <string name="strBrowser">Navegar</string>
    <string name="strPermissionDeny">No permission</string>
    <string name="title_activity_download">Download Tool</string>
    <string name="title_activity_upload">Upload Tool</string>
    <string name="title_Ping">Ping</string>
    <string name="title_Download">Download</string>
    <string name="title_Upload">Upload</string>
    <string name="strUpload">Upload</string>
    <string name="strUpgrade">Actualizar</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_ping_packet_size">Packet Size</string>
    <string name="ping_title">Ping Tool %s</string>
    <string name="yid_title">1D Barcode Tool</string>
    <string name="erd_title">2D Barcode Tool</string>
    <string name="title_activity_yi_d">1D</string>
    <string name="title_activity_er_d">2D</string>
    <string name="title_scan">Scan</string>
    <string name="title_clear">Clear</string>
    <string name="title_init_barcode">init Barcode</string>
    <string name="title_scan_between">Interval</string>
    <string name="title_work_time">Work</string>
    <string name="title_wait_time">Wait</string>
    <string name="yid_title_scan_compare">Compare</string>
    <string name="yid_title_scan_continuous">Auto,interval</string>
    <string name="yid_msg_scan_fail">Scan failure</string>
    <string name="yid_msg_scan_cancel">Scan canceled</string>
    <string name="yid_msg_scan_timeout">Scan timeout</string>
    <string name="yid_msg_scan_error">Barcode error</string>
    <string name="title_scan_count">total</string>
    <string name="title_succ_count">success</string>
    <string name="title_fail_count">failure</string>
    <string name="title_error_count">error</string>
    <string name="title_error_rate">error</string>
    <string name="title_succ_rate">success</string>
    <string name="title_fail_rate">failure</string>
    <string name="title_activity_bluetooth_print">BT Printer</string>
    <string name="title_decode_time">decode time</string>
    <string name="send">Send</string>
    <string name="Print">Print</string>
    <string name="Clear">Clear</string>
    <string name="not_connected">Please connect the bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Please select a device!!</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">Grayscale</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent"> HELLO WORLD! \n</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="tvInventoryName">Inventory Tag</string>
    <string name="tvCountOfTags">Total  </string>
    <string name="rbInventorySingle">Soltero</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="rbInventoryAnti">Anti</string>
    <string name="tvQ">Q value：</string>
    <string name="btInventory">Iniciar</string>
    <string name="title_stop_Inventory">Parar</string>
    <string name="tvTagUii">EPC</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagCount">Count</string>
    <string name="btClear">Reiniciar</string>
    <string name="tvTag">Tag</string>
    <string-array name="arrayAntiQ">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="arrayLF">
        <item>ID Card</item>
        <item>Animal Tag</item>
        <item>HiTag</item>
        <item>HDX Tag</item>
        <item>EM4450</item>
        <item>HID PROXIMITY</item>
    </string-array>
    <string-array name="arrayUart" translatable="false">
        <item>Barcode</item>
        <item>RFID</item>
        <item>UHF</item>
        <item>Fingerprint</item>
    </string-array>
    <string-array name="arrayCheck" translatable="false">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
    </string-array>
    <string name="btUii">Read EPC</string>
    <string name="ckWithUii">Use EPC</string>
    <string name="tvTagUii_Read">EPC：</string>
    <string name="tvBank">Banco：</string>
    <string name="tvPtr">Ptr：</string>
    <string name="tvLen">Largo：</string>
    <string name="tvAccessPwd">Contraseña de aceso：</string>
    <string name="tvLockCode">Codigo de Bloqueo：</string>
    <string name="tvOption_Read">Read Mode：</string>
    <string name="ckLoop_Read">Auto</string>
    <string name="ckAnti_Read">Anti</string>
    <string name="ckSecond">Configuracion de patrones de nivel 2</string>
    <string name="tvBank2_Read">Block：</string>
    <string name="tvPtr2_Read">Ptr：</string>
    <string name="tvLen2_Read">Largo：</string>
    <string name="tvData_Read">Datos：</string>
    <string name="btRead">Leer</string>
    <string name="uhf_title_kill" translatable="false">Kill:</string>
    <string name="uhf_title_access" translatable="false">Access:</string>
    <string name="uhf_title_uii" translatable="false">UII:</string>
    <string name="uhf_title_tid" translatable="false">TID:</string>
    <string name="uhf_title_user" translatable="false">USER:</string>
    <string name="uhf_title_read">Read</string>
    <string name="uhf_title_write">Write</string>
    <string name="uhf_title_filter">filtro</string>
    <string name="uhf_title_temp">Temporary mask</string>
    <string name="uhf_title_perm">Permanent mask</string>
    <string name="uhf_title_open">Open</string>
    <string name="uhf_title_lock">Lock</string>
    <string-array name="arrayBank">
        <item>RESERVADO</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USUARIO</item>
    </string-array>
    <string-array name="tiempoejecucion">
        <item>15s</item>
        <item>20s</item>
        <item>30s</item>
        <item>40s</item>
        <item>50s</item>
        <item>1min</item>
        <item>1:10min</item>
        <item>1:20min</item>
        <item>1:30min</item>
        <item>1:40min</item>
    </string-array>
    <string-array name="Orden">
        <item>vigas</item>
        <item>Tornillos</item>
        <item>Andenes</item>
        <item>Escaleras</item>
        <item>viguetas de varilla</item>
    </string-array>
    <string-array name="arrayReadLock">
        <item>Read</item>
        <item>Permalock</item>
    </string-array>
    <string-array name="arrayBank2">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="arrayOption_Read">
        <item>Single</item>
        <item>Auto</item>
        <item>Anti(1 level)</item>
        <item>Anti(2 level)</item>
    </string-array>
    <string name="btn_set_Ant">Set Antenna</string>
    <string name="btn_get_Ant">Get Antenna</string>
    <string name="uhf_title_power">Output Power：</string>
    <string name="uhf_power_name1">Ant 1 power：</string>
    <string name="uhf_power_name2">Ant 2 power：</string>
    <string name="uhf_power_name3">Ant 3 power：</string>
    <string name="uhf_power_name4">Ant 4 power：</string>
    <string name="uhf_power_name5">Ant 5 power：</string>
    <string name="uhf_power_name6">Ant 6 power：</string>
    <string name="uhf_power_name7">Ant 7 power：</string>
    <string name="uhf_power_name8">Ant 8 power：</string>
    <string name="uhf_btn_setpower">Set Power</string>
    <string name="uhf_btn_workwait">Set Pwm</string>
    <string name="uhf_btn_get_workwait">Get Pwm</string>
    <string name="uhf_btn_getpower">Get Power</string>
    <string name="uhf_title_dbm">dBm</string>
    <string name="uhf_title_link">RFLink：</string>
    <string name="uhf_btn_set_link">Set Link</string>
    <string name="uhf_btn_get_link">Get Link</string>
    <string name="action_rfid_upgrader">Upgrade</string>
    <string name="uhf_msg_tab_set">Configuracion</string>
    <string name="uhf_msg_tab_kill">Matar</string>
    <string name="uhf_msg_tab_lock">Bloquear</string>
    <string name="ant">Ant</string>
    <string name="module_temperature">Temperatura del modulo</string>
    <string name="exportData">Exportar Datos</string>
    <string name="tag_ant_msg">Show</string>
</resources>