<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    <item
        android:id="@+id/action_scan"
        android:actionViewClass="android.widget.Tab"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_scan"/>
    <item
        android:id="@+id/action_read"
        android:orderInCategory="100"
        android:actionViewClass="android.widget.Tab"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_read"/>
    <item
        android:id="@+id/action_write"
        android:orderInCategory="100"
        android:actionViewClass="android.widget.Tab"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_write"/>
    -->
    <item
        android:id="@+id/action_ant"
        app:showAsAction="never"
        android:title="@string/tag_ant_msg"
        android:visible="false"/>
    <item
        android:id="@+id/action_lock"
        app:showAsAction="never"
        android:title="@string/uhf_msg_tab_lock"
        android:visible="false"/>
    <item
        android:id="@+id/action_kill"
        app:showAsAction="never"
        android:title="@string/uhf_msg_tab_kill"
        android:visible="false"/>
    <item
        android:id="@+id/action_set"
        android:showAsAction="always"
        android:title="@string/uhf_msg_tab_set"
        android:visible="false"/>
    <item
        android:id="@+id/action_Deactivate"
        app:showAsAction="always"
        android:title="BlockPermalock"
        android:visible="false"/>
    <item
        android:id="@+id/action_rfid_upgrader"
        app:showAsAction="always"
        android:title="@string/action_rfid_upgrader"
        android:visible="false"/>
    <item
        android:id="@+id/UHF_ver"
        app:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/UHF_temperature"
        app:showAsAction="never"
        android:title="@string/module_temperature"/>
    <item
        android:id="@+id/UHF_exportData"
        app:showAsAction="never"
        android:title="@string/exportData"/>

</menu>