<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/BtInventory"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/button_bg"
                android:text="@string/btInventory"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/BtClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/button_bg"
                android:text="@string/btClear"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="Total: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="0"
                android:textColor="@color/red1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_totalNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="0"
                android:textColor="@color/red1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvTagLen"
                android:visibility="gone" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/tvTagCount"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:gravity="center"
                android:text="RSSI"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ant"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1" />

        <ListView
            android:id="@+id/LvTags"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/gray1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/show_img_width"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:padding="6dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/show_img_width"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:padding="6dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/show_img_width"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:padding="6dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/show_img_width"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:padding="6dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>